minor improvements to create-issue action